logs/dk-tasklib.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/dk_tasklib-0.3.0.dist-info'...
Listing './lib/python3.5/site-packages/dktasklib'...
Compiling './lib/python3.5/site-packages/dktasklib/docs.py'...
***   File "./lib/python3.5/site-packages/dktasklib/docs.py", line 60
    print textwrap.dedent("""\
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dktasklib/executables.py'...
***   File "./lib/python3.5/site-packages/dktasklib/executables.py", line 84
    print 'Your ~/.pypirc file should have a [pypi] section instead of a [server-login] section'
                                                                                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/dktasklib/lessc.py'...
***   File "./lib/python3.5/site-packages/dktasklib/lessc.py", line 55
    print "Missing source:", source, '(skipping)'
                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dktasklib/manage.py'...
***   File "./lib/python3.5/site-packages/dktasklib/manage.py", line 48
    print "Skipping collectstic: no changes to static dir."
                                                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/dktasklib/runners.py'...
***   File "./lib/python3.5/site-packages/dktasklib/runners.py", line 41
    print cmdline
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/dktasklib/upversion.py'...
***   File "./lib/python3.5/site-packages/dktasklib/upversion.py", line 98
    print "changed version to %s in %d files" % (new_version, changed)
                                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dktasklib/urlinliner.py'...
***   File "./lib/python3.5/site-packages/dktasklib/urlinliner.py", line 14
    print "%s is too big (%d bytes), max is 10KB" % (name, len(data))
                                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dktasklib/utils.py'...
***   File "./lib/python3.5/site-packages/dktasklib/utils.py", line 75
    print 'error =====>', s, '<====== error'
                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/dktasklib/version.py'...
***   File "./lib/python3.5/site-packages/dktasklib/version.py", line 88
    print """
        Filename already exists, add --force or call upversion: {}
        """.format(dst)
             
                                                                  
          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dktasklib/watch.py'...
***   File "./lib/python3.5/site-packages/dktasklib/watch.py", line 86
    print 'watching for changes.. (Ctrl-C to exit)'
                                                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
